--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@executors-org/package-lib": "^0.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
