--- a/.github/workflows/check-app.yaml
+++ b/.github/workflows/check-app.yaml
@@ -21,7 +21,7 @@ jobs:
           scope: 'executors-org'
 
       - name: Authenticate with private NPM package
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
       
       - name: Install dependencies
         run: yarn install --frozen-lockfile
