--- a/.github/workflows/check-app.yaml
+++ b/.github/workflows/check-app.yaml
@@ -19,12 +19,11 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com
           scope: 'executors-org'
-
-      - name: Authenticate with private NPM package
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
       
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Build
         run: yarn build
